@@ -1,11 +1,11 @@
 import com.example.dictionary.Trie;
 import org.junit.Assert;
 import org.junit.Test;
-import org.junit.Assert.*;
 
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 public class TrieTest {
     @Test
@@ -18,10 +18,10 @@ public class TrieTest {
     @Test
     public void equalsTest2() {
         Trie trie1 = new Trie();
-        ArrayList<String> arrayList1 = new ArrayList<String>(Arrays.asList(new String[]{"abc", "bcd"}));
+        ArrayList<String> arrayList1 = new ArrayList<String>(Arrays.asList("abc", "bcd"));
         trie1.insertAll(arrayList1);
         Trie trie2 = new Trie();
-        ArrayList<String> arrayList2 = new ArrayList<String>(Arrays.asList(new String[]{"abc", "bcd"}));
+        ArrayList<String> arrayList2 = new ArrayList<String>(Arrays.asList("abc", "bcd"));
         trie2.insertAll(arrayList2);
         Assert.assertEquals(trie1, trie2);
     }
@@ -29,10 +29,10 @@ public class TrieTest {
     @Test
     public void equalsTest3() {
         Trie trie1 = new Trie();
-        ArrayList<String> arrayList1 = new ArrayList<String>(Arrays.asList(new String[]{"bcd", "abc", "bcd"}));
+        ArrayList<String> arrayList1 = new ArrayList<String>(Arrays.asList("bcd", "abc", "bcd"));
         trie1.insertAll(arrayList1);
         Trie trie2 = new Trie();
-        ArrayList<String> arrayList2 = new ArrayList<String>(Arrays.asList(new String[]{"abc", "bcd"}));
+        ArrayList<String> arrayList2 = new ArrayList<String>(Arrays.asList("abc", "bcd"));
         trie2.insertAll(arrayList2);
         Assert.assertEquals(trie1, trie2);
     }
@@ -40,10 +40,10 @@ public class TrieTest {
     @Test
     public void equalsTest4() {
         Trie trie1 = new Trie();
-        ArrayList<String> arrayList1 = new ArrayList<String>(Arrays.asList(new String[]{"bcd", "abc", "ab"}));
+        ArrayList<String> arrayList1 = new ArrayList<String>(Arrays.asList("bcd", "abc", "ab"));
         trie1.insertAll(arrayList1);
         Trie trie2 = new Trie();
-        ArrayList<String> arrayList2 = new ArrayList<String>(Arrays.asList(new String[]{"abc", "bcd"}));
+        ArrayList<String> arrayList2 = new ArrayList<String>(Arrays.asList("abc", "bcd"));
         trie2.insertAll(arrayList2);
         Assert.assertNotEquals(trie1, trie2);
     }
@@ -51,12 +51,12 @@ public class TrieTest {
     @Test
     public void allWordsStartWithTest1() {
         Trie trie = new Trie();
-        ArrayList<String> arrayList1 = new ArrayList<String>(Arrays.asList(new String[]{"bcd", "abc", "ab"}));
+        ArrayList<String> arrayList1 = new ArrayList<String>(Arrays.asList("bcd", "abc", "ab"));
         trie.insertAll(arrayList1);
         String prefix = "";
         ArrayList<String> actual = trie.allWordsStartWith(prefix);
         Collections.sort(actual);
-        ArrayList<String> expected = new ArrayList<>(Arrays.asList(new String[]{"bcd", "abc", "ab"}));
+        ArrayList<String> expected = new ArrayList<>(Arrays.asList("bcd", "abc", "ab"));
         Collections.sort(expected);
         Assert.assertEquals(expected, actual);
     }
@@ -64,12 +64,12 @@ public class TrieTest {
     @Test
     public void allWordsStartWithTest2() {
         Trie trie = new Trie();
-        ArrayList<String> arrayList1 = new ArrayList<String>(Arrays.asList(new String[]{""}));
+        ArrayList<String> arrayList1 = new ArrayList<String>(Arrays.asList(""));
         trie.insertAll(arrayList1);
         String prefix = "";
         ArrayList<String> actual = trie.allWordsStartWith(prefix);
         Collections.sort(actual);
-        ArrayList<String> expected = new ArrayList<>(Arrays.asList(new String[]{}));
+        ArrayList<String> expected = new ArrayList<>(List.of());
         Collections.sort(expected);
         Assert.assertEquals(expected, actual);
     }
@@ -77,12 +77,12 @@ public class TrieTest {
     @Test
     public void allWordsStartWithTest3() {
         Trie trie = new Trie();
-        ArrayList<String> arrayList1 = new ArrayList<String>(Arrays.asList(new String[]{"abc", "abcde", "abcdef", "acef"}));
+        ArrayList<String> arrayList1 = new ArrayList<String>(Arrays.asList("abc", "abcde", "abcdef", "acef"));
         trie.insertAll(arrayList1);
         String prefix = "ab";
         ArrayList<String> actual = trie.allWordsStartWith(prefix);
         Collections.sort(actual);
-        ArrayList<String> expected = new ArrayList<>(Arrays.asList(new String[]{"abc", "abcde", "abcdef"}));
+        ArrayList<String> expected = new ArrayList<>(Arrays.asList("abc", "abcde", "abcdef"));
         Collections.sort(expected);
         Assert.assertEquals(expected, actual);
     }
@@ -90,12 +90,12 @@ public class TrieTest {
     @Test
     public void allWordsStartWithTest4() {
         Trie trie = new Trie();
-        ArrayList<String> arrayList1 = new ArrayList<String>(Arrays.asList(new String[]{"abc", "abcde", "abcdef", "acef", "trie", "tricky", "lec"}));
+        ArrayList<String> arrayList1 = new ArrayList<String>(Arrays.asList("abc", "abcde", "abcdef", "acef", "trie", "tricky", "lec"));
         trie.insertAll(arrayList1);
         String prefix = "t";
         ArrayList<String> actual = trie.allWordsStartWith(prefix);
         Collections.sort(actual);
-        ArrayList<String> expected = new ArrayList<>(Arrays.asList(new String[]{"trie", "tricky"}));
+        ArrayList<String> expected = new ArrayList<>(Arrays.asList("trie", "tricky"));
         Collections.sort(expected);
         Assert.assertEquals(expected, actual);
     }
@@ -103,12 +103,12 @@ public class TrieTest {
     @Test
     public void allWordsStartWithTest5() {
         Trie trie = new Trie();
-        ArrayList<String> arrayList1 = new ArrayList<String>(Arrays.asList(new String[]{"abc", "abcde", "abcdef", "acef", "trie", "tricky", "lec"}));
+        ArrayList<String> arrayList1 = new ArrayList<String>(Arrays.asList("abc", "abcde", "abcdef", "acef", "trie", "tricky", "lec"));
         trie.insertAll(arrayList1);
         String prefix = "";
         ArrayList<String> actual = trie.allWordsStartWith(prefix);
         Collections.sort(actual);
-        ArrayList<String> expected = new ArrayList<>(Arrays.asList(new String[]{"abc", "abcde", "abcdef", "acef", "trie", "tricky", "lec"}));
+        ArrayList<String> expected = new ArrayList<>(Arrays.asList("abc", "abcde", "abcdef", "acef", "trie", "tricky", "lec"));
         Collections.sort(expected);
         Assert.assertEquals(expected, actual);
     }
@@ -116,40 +116,36 @@ public class TrieTest {
     @Test
     public void insertAllTest1() {
         Trie trie1 = new Trie();
-        ArrayList<String> arrayList1 = new ArrayList<String>(Arrays.asList(new String[]{"a"}));
-        trie1.insertAll(arrayList1);
-        Trie trie2 = new Trie();
-        trie2.getChildren().put('a', new Trie('a'));
-        trie2.getChildren().get('a').setEndOfWord(true);
-        trie2.getChildren().get('a').setCntWords(1);
-        trie2.setCntWords(1);
-        System.out.println(trie1);
-        System.out.println(trie2);
-        Assert.assertEquals(trie2, trie1);
+        ArrayList<String> arrayList = new ArrayList<String>(Arrays.asList("a", "tdcec", "abcd", "a", "abc", "tde"));
+        trie1.insertAll(arrayList);
+        ArrayList<String> expected = new ArrayList<String>(Arrays.asList("tdcec", "abcd", "a", "abc", "tde"));
+        Collections.sort(expected);
+        ArrayList<String> actual = trie1.allWordsStartWith("");
+        Collections.sort(actual);
+        Assert.assertEquals(expected, actual);
     }
 
     @Test
     public void removeTest1() {
         Trie trie1 = new Trie();
-        ArrayList<String> arrayList1 = new ArrayList<String>(Arrays.asList(new String[]{"bcd", "abc", "ab"}));
+        ArrayList<String> arrayList1 = new ArrayList<String>(Arrays.asList("bcd", "abc", "ab"));
         trie1.insertAll(arrayList1);
         trie1.remove("ab");
         System.out.println(trie1.allWordsStartWith(""));
         Trie trie2 = new Trie();
-        ArrayList<String> arrayList2 = new ArrayList<String>(Arrays.asList(new String[]{"abc", "bcd"}));
+        ArrayList<String> arrayList2 = new ArrayList<String>(Arrays.asList("abc", "bcd"));
         trie2.insertAll(arrayList2);
-        System.out.println(trie2.getCntWords());
         Assert.assertEquals(trie1, trie2);
     }
 
     @Test
     public void removeTest2() {
         Trie trie1 = new Trie();
-        ArrayList<String> arrayList1 = new ArrayList<String>(Arrays.asList(new String[]{"bcd", "abc", "ab"}));
+        ArrayList<String> arrayList1 = new ArrayList<String>(Arrays.asList("bcd", "abc", "ab"));
         trie1.insertAll(arrayList1);
         trie1.remove("a");
         Trie trie2 = new Trie();
-        ArrayList<String> arrayList2 = new ArrayList<String>(Arrays.asList(new String[]{"abc", "bcd", "ab"}));
+        ArrayList<String> arrayList2 = new ArrayList<String>(Arrays.asList("abc", "bcd", "ab"));
         trie2.insertAll(arrayList2);
         Assert.assertEquals(trie1, trie2);
     }
@@ -157,11 +153,11 @@ public class TrieTest {
     @Test
     public void removeTest3() {
         Trie trie1 = new Trie();
-        ArrayList<String> arrayList1 = new ArrayList<String>(Arrays.asList(new String[]{"xyzt", "abcd", "acs"}));
+        ArrayList<String> arrayList1 = new ArrayList<String>(Arrays.asList("xyzt", "abcd", "acs"));
         trie1.insertAll(arrayList1);
         trie1.remove("");
         Trie trie2 = new Trie();
-        ArrayList<String> arrayList2 = new ArrayList<String>(Arrays.asList(new String[]{"xyzt", "abcd", "acs"}));
+        ArrayList<String> arrayList2 = new ArrayList<String>(Arrays.asList("xyzt", "abcd", "acs"));
         trie2.insertAll(arrayList2);
         Assert.assertEquals(trie1, trie2);
     }
@@ -169,11 +165,11 @@ public class TrieTest {
     @Test
     public void removeTest4() {
         Trie trie1 = new Trie();
-        ArrayList<String> arrayList1 = new ArrayList<String>(Arrays.asList(new String[]{"xyzt", "abcd", "acs"}));
+        ArrayList<String> arrayList1 = new ArrayList<String>(Arrays.asList("xyzt", "abcd", "acs"));
         trie1.insertAll(arrayList1);
         trie1.remove("acdcuvhf");
         Trie trie2 = new Trie();
-        ArrayList<String> arrayList2 = new ArrayList<String>(Arrays.asList(new String[]{"xyzt", "abcd", "acs"}));
+        ArrayList<String> arrayList2 = new ArrayList<String>(Arrays.asList("xyzt", "abcd", "acs"));
         trie2.insertAll(arrayList2);
         Assert.assertEquals(trie1, trie2);
     }
